--- a/Lesson 2/app/src/main/res/values/strings.xml
+++ b/Lesson 2/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 <resources>
     <string name="app_name">Github Query</string>
     <string name="search">Search</string>
+    <string name="error">An error has occurred...</string>
 </resources>
